# FunSpeech

./: .cnb.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.py
.cnb/: web_trigger.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  asr.py  async_tts.py  openai.py  tts.py  websocket_asr.py  websocket_tts.py
app/core/: __init__.py  config.py  database.py  exceptions.py  executor.py  logging.py  security.py
app/models/: __init__.py  asr.py  async_tts.py  common.py  tts.py  websocket_asr.py  websocket_tts.py
app/services/: __init__.py  websocket_asr.py  websocket_tts.py
app/services/asr/: __init__.py  engine.py  http_engine.py  manager.py  models.json
app/services/tts/: __init__.py  engine.py  http_engine.py  qwen3_http_engine.py
app/services/tts/clone/: README.md  __init__.py  voice_manager.py
app/utils/: __init__.py  audio.py  audio_filter.py  common.py  model_loader.py  number_converter.py  text_processing.py
benchmarks/: README.md
benchmarks/results/asr_funasr/: asr_baseline.json  asr_baseline_high.json  asr_patched_sem1.json  asr_patched_sem4.json
benchmarks/results/asr_qwen3/: qwen3_baseline.json  qwen3_baseline_high.json  qwen3_patched.json  qwen3_patched_high.json
benchmarks/results/tts/: cosyvoice3_clone_bench.json  cosyvoice3_vllm_omni_clone.json  cosyvoice3_vllm_omni_gpuort_clone.json  qwen3_tts_base_clone_sem1.json  qwen3_tts_base_clone_sem2.json  qwen3_tts_base_clone_sem4.json  qwen3_tts_vllm_omni_base_clone.json  tts_baseline.json  tts_patched_sem1.json  tts_patched_sem2.json  tts_patched_sem8.json
benchmarks/results/tts_cohabit/: cosyvoice_same_gpu_1replica.json  cosyvoice_same_gpu_2replica.json  cosyvoice_same_gpu_3replica.json
benchmarks/scripts/: bench_asr.py  bench_asr_event_loop.py  bench_cohabit.py  bench_event_loop.py  bench_tts.py  bench_voice_crud.py  gen_audio.py
dependencies/: requirements.txt
dependencies/CosyVoice/: requirements-cpu.txt  requirements-gpu.txt
docs/: deployment.md  migration_to_latest.md  nearfield_filter.md  websocket_tts_api.md
scripts/: README.md  analyze_audio_rms.py  openai_sdk_e2e.py  plan_deployment.py
scripts/benchmark/: README.md  __init__.py  config.py  run.py
scripts/benchmark/clients/: __init__.py  asr_client.py  base_client.py  tts_client.py
scripts/benchmark/metrics/: __init__.py  models.py  statistics.py
scripts/benchmark/reporters/: __init__.py  chart_generator.py  markdown_reporter.py
scripts/benchmark/utils/: __init__.py  audio_utils.py  text_generator.py
services/: README.md
services/cosyvoice/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
services/cosyvoice/tests/: test_health.py
services/cosyvoice3_vllm_omni/: Dockerfile  README.md  pyproject.toml  server.py
services/cosyvoice3_vllm_omni/tests/: test_health.py
services/dolphin/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
services/dolphin/tests/: test_health.py
services/funasr/: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
services/funasr/tests/: test_health.py
services/qwen3_asr_vllm/: Dockerfile  README.md  pyproject.toml  server.py
services/qwen3_asr_vllm/tests/: test_health.py
services/qwen3_tts/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
services/qwen3_tts/tests/: test_health.py
services/qwen3_tts_vllm_omni/: Dockerfile  README.md  pyproject.toml  server.py
services/qwen3_tts_vllm_omni/tests/: test_health.py
services/vllm_omni_tts_common/: __init__.py  facade.py
tests/: test_aliyun_asr_ws.py  test_aliyun_websocket.py  test_async_tts.py  test_number_converter.py  test_openai_audio_api.py  test_tts_engine_backends.py  test_tts_volume.py
