[project]
name = "funspeech-cosyvoice-service"
version = "0.1.0"
description = "CosyVoice2 / CosyVoice3 子服务 — TTS 离线 + 流式 + 音色管理"
requires-python = ">=3.10,<3.11"

# 注意: vLLM 不是 vllm serve 端到端部署,而是 CosyVoice2(load_vllm=True) 内部加速 LLM。
# 因此本子服务仍需 cosyvoice 这个 Python 包及其全部 transformers/conformer/diffusers 依赖。
# 子模块代码 (Step 7 加 git submodule) 通过 services/cosyvoice/third_party/CosyVoice 引入。
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.6",
    "websockets==11.0",
    "vllm>=0.11.0",
    "transformers==4.51.3",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "modelscope==1.20.0",
    # CosyVoice runtime deps (从主项目 pyproject 搬过来)
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "HyperPyYAML==1.2.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "x-transformers==2.12.2",
    "openai-whisper==20231117",
    "inflect==7.0.0",
    "wetext==0.0.4",
    "onnx==1.16.0",
    "onnxruntime-gpu==1.18.0",
    "protobuf==4.25",
    "gdown==5.1.0",
    "rich==13.7.1",
    "wget==3.2",
    "librosa==0.9.2",
    "scipy==1.15.3",
    "pydub==0.25.1",
    # 用 setuptools<70 + no-build-isolation 解决 openai-whisper 老 sdist 的 pkg_resources 问题
    "setuptools<70",
    "wheel",
]

[tool.uv]
package = false
no-build-isolation-package = ["openai-whisper"]

[[tool.uv.dependency-metadata]]
name = "openai-whisper"
version = "20231117"
requires-dist = [
    "numba",
    "numpy",
    "torch",
    "tqdm",
    "more-itertools",
    "tiktoken",
    "triton>=2.0.0,<3; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
