[project]
name = "funspeech-dolphin-service"
version = "0.1.0"
description = "DataoceanAI Dolphin ASR 子服务 — 仅离线 HTTP /asr/file"
requires-python = ">=3.10,<3.11"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.6",
    "dataoceanai-dolphin==20250716",
    "modelscope==1.20.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "soundfile==0.12.1",
    "numpy==1.23.5",
    # setuptools < 80: librosa 与 modelscope 都用了已被 setuptools 80+ 移除的 pkg_resources
    "setuptools<80",
    # Dolphin 输出含 <lang><region> 标记,有标点需求时通过 funasr 子服务 /asr/punc 完成
]

[tool.uv]
package = false
